--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
-<audio controls>
-    <source src="https://raw.githubusercontent.com/ytyaru/Audio.Sample.201708031714/master/20170803/ogg/CMajor.ogg">
-    <source src="https://raw.githubusercontent.com/ytyaru/Audio.Sample.201708031714/master/20170803/wav/CMajor.wav">
-</audio>
+<!DOCTYPE html>
+<head>
+    <meta charset="utf-8" />
+    <title>Supplemental material for our research papers</title>
+</head>
+<body>
+    <header>
+        <h1>Supplemental material for our research papers</h1>
+    </header>
+    <main>        
+        <section>
+            <h2>Speech-laugh synthesis</h2>
+            <p>
+                R. Setoguchi and Y. Arimoto, “Assessment of the synthetic quality and controllability of laughing onset in speech-laugh synthesis,” in Proceedings of Interspeech2025, 2025. (accepted)
+            </p>
+            <p><a url="https://yoshiko-arimoto.github.io/mac-lab/IS2025/index.html">Link</a></p>
+        </section>
+    </main>
+    
+</body>
+</html>
