--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <p>
                     R. Setoguchi and Y. Arimoto, “Assessment of the synthetic quality and controllability of laughing onset in speech-laugh synthesis,” in Proceedings of Interspeech2025, 2025. (accepted)
                 </p>
-                <p><a url="https://yoshiko-arimoto.github.io/mac-lab/IS2025/index.html">Link</a></p>
+                <p><a href="https://yoshiko-arimoto.github.io/mac-lab/IS2025/index.html">Link</a></p>
             </section>
         </main>
         
