--- a/IS2025/index.html
+++ b/IS2025/index.html
@@ -63,7 +63,10 @@
             for synthesized SL. However, the difference between segmented
             SL onset and correct onset was greater for synthesized SL with
             phonetic intelligibility training than for that without training.
-            Index Terms: speech-laugh synthesis, paralinguistic information,
+        </p>
+        <p>
+            <strong>Index Terms: </strong>
+            speech-laugh synthesis, paralinguistic information,
             laughter onset controllability, naturality, intelligibility
         </p>
         <p>
