--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
             <section>
                 <h2>Speech-laugh synthesis</h2>
                 <p>
-                    R. Setoguchi and Y. Arimoto, “Assessment of the synthetic quality and controllability of laughing onset in speech-laugh synthesis,” in Proceedings of Interspeech2025, 2025. (accepted)
+                    <address>
+                        R. Setoguchi and Y. Arimoto, “Assessment of the synthetic quality and controllability of laughing onset in speech-laugh synthesis,” in Proceedings of Interspeech2025, 2025. (accepted)                        
+                    </address>
                 </p>
                 <p><a href="https://yoshiko-arimoto.github.io/mac-lab/IS2025/index.html">Link</a></p>
             </section>
