--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
     <head>
         <meta charset="utf-8" />
-        <title>Supplemental material for our research papers</title>
+        <title>mac-lab</title>
     </head>
     <body>
         <header>
-            <h1>Supplemental material for our research papers</h1>
+            <h1>Introduction to our works from mac-lab</h1>
+            <p>
+                This page introduces some of our works. 
+                We are <a href="https://mac-lab.org">mac-lab</a> from <a href="https://chibatech.jp/">Chiba Institute of Technology</p>. 
+            </p>
         </header>
         <main>        
             <section>
