--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <h1>Introduction to our works from mac-lab</h1>
             <p>
                 This page introduces some of our works. 
-                We are <a href="https://mac-lab.org">mac-lab</a> from <a href="https://chibatech.jp/">Chiba Institute of Technology</p>. 
+                We are <a href="https://mac-lab.org">mac-lab</a> from <a href="https://chibatech.jp/">Chiba Institute of Technology</a>. 
             </p>
         </header>
         <main>        
