--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
                 </p>
                 <p><a href="https://yoshiko-arimoto.github.io/mac-lab/IS2025/index.html">Link</a></p>
             </section>
+            <section>
+                <h2>Scream synthesis and speaker-converted screams</h2>
+                <p>
+                    Comming soon.
+                    <!-- 
+                    <address>
+                        R. Setoguchi and Y. Arimoto, “Assessment of the synthetic quality and controllability of laughing onset in speech-laugh synthesis,” in Proceedings of Interspeech2025, 2025. (accepted)                        
+                    </address>
+                </p>
+                <p>
+                    <a href="https://yoshiko-arimoto.github.io/mac-lab/IS2025/index.html">Link</a>
+                    -->
+                </p>
+            </section>
         </main>
         
     </body>
