--- a/IS2025/index.html
+++ b/IS2025/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <header>
-        <h1>Example of synthesized speech-laugh</h1>
+        <h1>Speech-laugh synthesis</h1>
         
     </header>
     
