--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <h1>Introduction to our works from mac-lab</h1>
             <p>
                 This page introduces some of our works. 
-                We are <a href="https://mac-lab.org">mac-lab</a> from <a href="https://chibatech.jp/">Chiba Institute of Technology</a>. 
+                We are <a href="https://mac-lab.org">mac-lab (Multisensory affct computing laboratory) </a> from <a href="https://chibatech.jp/">Chiba Institute of Technology</a>. 
             </p>
         </header>
         <main>        
@@ -36,6 +36,12 @@
                 </p>
             </section>
         </main>
+        <footer>
+            <address>
+                Multisensory affct computing laboratory, Yoshiko ARIMOTO's lab, from Chiba Institute of Technology.
+            </address>
+            
+        </footer>
         
     </body>
 </html>
