--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 This page introduces some of our works. 
                 We are <a href="https://mac-lab.org">mac-lab (multisensory affct computing laboratory) </a> from <a href="https://chibatech.jp/">Chiba Institute of Technology</a>. 
             </p>
+            <hr color="#ff0000">
         </header>
         <main>        
             <section>
@@ -37,6 +38,7 @@
             </section>
         </main>
         <footer>
+            <hr color="#ff0000">
             <address>
                 Multisensory affct computing laboratory, Yoshiko ARIMOTO's lab, from Chiba Institute of Technology.
             </address>
