--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 This page introduces some of our works. 
                 We are <a href="https://mac-lab.org">mac-lab (multisensory affct computing laboratory) </a> from <a href="https://chibatech.jp/">Chiba Institute of Technology</a>. 
             </p>
-            <hr color="#ff0000">
+            <hr width="300px">
         </header>
         <main>        
             <section>
@@ -38,9 +38,9 @@
             </section>
         </main>
         <footer>
-            <hr color="#ff0000">
+            <hr width="300px">
             <address>
-                Multisensory affct computing laboratory, Yoshiko ARIMOTO's lab, from Chiba Institute of Technology.
+                <center>Multisensory affct computing laboratory, Yoshiko ARIMOTO's lab, from Chiba Institute of Technology.</center>
             </address>
             
         </footer>
