--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <section>
                 <h2>Scream synthesis and speaker-converted screams</h2>
                 <p>
-                    Comming soon.
+                    Coming soon.
                     <!-- 
                     <address>
                         R. Setoguchi and Y. Arimoto, “Assessment of the synthetic quality and controllability of laughing onset in speech-laugh synthesis,” in Proceedings of Interspeech2025, 2025. (accepted)                        
