--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
                 <p><a href="https://yoshiko-arimoto.github.io/mac-lab/IS2025/index.html">Link</a></p>
             </section>
             <section>
-                <h2>Scream synthesis and speaker-converted screams</h2>
+                <h2>Speaker-conversion for screams and scream synthesis</h2>
                 <p>
                     Coming soon.
                     <!-- 
                     <address>
-                        R. Setoguchi and Y. Arimoto, “Assessment of the synthetic quality and controllability of laughing onset in speech-laugh synthesis,” in Proceedings of Interspeech2025, 2025. (accepted)                        
+                        K. Shiratori and Y. Arimoto, " ," IEEE Transactions on Affective Computing, 2025.                     
                     </address>
                 </p>
                 <p>
-                    <a href="https://yoshiko-arimoto.github.io/mac-lab/IS2025/index.html">Link</a>
+                    <a href="https://yoshiko-arimoto.github.io/mac-lab/AC2025/index.html">Link</a>
                     -->
                 </p>
             </section>
