--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <h1>Introduction to our works from mac-lab</h1>
+            <h1>Our works</h1>
             <p>
                 This page introduces some of our works. 
                 We are <a href="https://mac-lab.org">mac-lab (multisensory affct computing laboratory) </a> from <a href="https://chibatech.jp/">Chiba Institute of Technology</a>. 
